k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab01-app
  namespace: lab01-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lab01-app
  template:
    metadata:
      labels:
        app: lab01-app
    spec:
      containers:
        - name: web-lab01-app-1
          image: vasilevaa/lab01-img:latest
          ports:
            - containerPort: 8081
