k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: courseapp-service
  namespace: lab01-app
spec:
  selector:
    app: lab01-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
