k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-ingress
  namespace: lab01-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: courses.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: courseapp-service
                port:
                  number: 8080
